<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bupa_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_width="fill_parent"
        android:layout_height="45dp" >

        <ImageView
            android:id="@+id/healthyheartlogoheaderID"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="0dp"
            android:src="@drawable/healthyheartlogoheader" />

        <ImageView
            android:id="@+id/progress2barID"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/healthyheartlogoheaderID"
            android:padding="0dp"
            android:src="@drawable/progressdbar" />
    </RelativeLayout>

    <View
        android:id="@+id/viewline"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/explanationTextColor" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:background="@drawable/textviews"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/timeview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textColor="@color/explanationTextColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/resultview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:textColor="@color/explanationTextColor"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/riskview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.4"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tool"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.05"
                android:background="@color/explanationTextColor"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tooltippolygon" />
            </LinearLayout>

            <TextView
                android:id="@+id/bigtext"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.75"
                android:background="@color/explanationTextColor"
                android:ellipsize="end"
                android:padding="10dp"
                android:text="@string/advice_txt3"
                android:textColor="@color/tool_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastadvice"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageView
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/iconalert" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                android:gravity="center"
                android:text="@string/advice_txt8"
                android:textColor="@color/explanationTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.4"
                android:background="@drawable/advice_botton" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

            <ImageButton
                android:id="@+id/lastbotton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.18"
                android:background="@drawable/speaktobupabtn" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastkeep"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/apptext"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"
                android:gravity="center"
                android:text="@string/Apps"
                android:textColor="@color/explanationTextColor"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/bupalayout1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/textviews"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/bupaimage1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.17"
                    android:src="@drawable/runicon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bupa_miles"
                        android:textColor="@color/explanationTextColor"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem"
                        android:textColor="@color/explanationTextColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.11"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55" />

                <ImageButton
                    android:id="@+id/openapp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:background="@drawable/btnopenapp"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.03" />

            <LinearLayout
                android:id="@+id/bupalayout2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/textviews"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/bupaimage2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.17"
                    android:src="@drawable/runicon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.7"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bupa_miles"
                        android:textColor="@color/explanationTextColor"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem"
                        android:textColor="@color/explanationTextColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.11"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55" />

                <ImageButton
                    android:id="@+id/download"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:background="@drawable/btnopenapp"
                    android:scaleType="fitXY" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>